feat[26]: expose completion report endpoint
