# internal/adapters/http/handler/work_order_handler/request.go
@@ -1,0 +1,6 @@
+package work_order_handler
+
+type reportCompletionRequest struct {
+	Description  string   `json:"description" binding:"required"`
+	ImageFileIDs []string `json:"image_file_ids" binding:"required"`
+}
